# VibeCity

./: .gitignore  CMakeLists.txt  README.md
data/buildings/: 01_house.vbd  02_farm.vbd  03_bakery.vbd  04_woodcutter.vbd  05_storehouse.vbd  06_quarry.vbd  07_brickyard.vbd  08_potter.vbd  09_granary.vbd  99_construction_site.vbd
docs/: benchmark-history.md  building-definitions.md  code-review-2026-06-20.md  design.md  engineering-quality.md  next-playtest-roadmap.md  physical-resource-roadmap.md  playtest-2026-06-25.md  playtest-checklist.md  prototype-simulation.md  save-format.md  self-sufficient-village-roadmap.md
src/bench/: main.cpp
src/cli/: main.cpp
src/client/: BuildMenu.cpp  BuildMenu.hpp  ClientMode.cpp  ClientMode.hpp  Hud.cpp  Hud.hpp  InputController.cpp  InputController.hpp  Inspector.cpp  Inspector.hpp  MapView.cpp  MapView.hpp  Palette.cpp  Palette.hpp  Text.cpp  Text.hpp  main.cpp
src/core/: Building.cpp  Building.hpp  BuildingCatalog.cpp  Capability.hpp  Inventory.cpp  Inventory.hpp  Map.cpp  Map.hpp  Resource.hpp  Simulation.cpp  Simulation.hpp  SimulationState.cpp
src/game/: GameSession.cpp  GameSession.hpp  Objectives.cpp  Objectives.hpp  SaveGame.cpp  Scenario.cpp  Scenario.hpp
tests/: TestSupport.hpp  client_tests.cpp  game_tests.cpp  simulation_tests.cpp
